HDX-9328 remove placeholders, more label spacing HDX-9345 bigger toggle icon HDX-9100 fix activity toggle

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
@@ -2546,7 +2546,7 @@ textarea {
   width: 85px;
 }
 .list-header .show-filter-switch .form-check-input {
-  margin-top: 18px;
+  margin-top: 14px;
   box-shadow: none;
 }
 .list-header .show-filter-switch .form-check-input.form-check-input--always-closed:checked {
@@ -3077,6 +3077,10 @@ ul.list-horizontal li:first-child:before {
 .form-explanation .cloud-img {
   height: 21px;
   margin-right: 3px;
+}
+.form-check-input {
+  width: 30px;
+  height: 20px;
 }
 /**
  * HDX Footer
