--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/forms.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/forms.less
@@ -530,3 +530,8 @@ ul.list-horizontal {
   }
 
 }
+
+.form-check-input {
+  width: 30px;
+  height: 20px;
+}
