--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/search_/list-header-search.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/search_/list-header-search.less
@@ -86,7 +86,7 @@
       width: 85px;
     }
     .form-check-input {
-      margin-top: 18px;
+      margin-top: 14px;
       box-shadow: none;
       &.form-check-input--always-closed {
         &:checked {
